Add array shuffler and prepare html for changing deadline preview

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="main-container">
       <div class="main pre-click">
-        <div class="main-title">Countdown to *!</div>
+        <div class="main-title">Countdown to&nbsp;<div>*</div>!</div>
         <form class='form'>
           <input type="text" placeholder='MM' class='month'/>
           <input type="text" placeholder='DD' class='day'/>
